# Logginator-Lib

./: CMakeLists.txt  README.md
inc/: logginator-error.hpp  logginator-format.hpp  logginator-formator.hpp  logginator-manager.hpp  logginator-printer.hpp  logginator.hpp
src/: logginator-error.cpp  logginator-format.cpp  logginator-formator.cpp  logginator-manager.cpp  logginator-printer.cpp  logginator.cpp
